[project]
name = "esmmrank"
version = "0.1.0"
description = "ESMM Search Ranking Algorithm Implementation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[project.scripts]
esmmrank = "esmmrank.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/esmmrank"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "kaggle>=1.8.3",
    "tensorboard>=2.20.0",
]
